--- a/src/templates/country-card.hbs
+++ b/src/templates/country-card.hbs
@@ -1,5 +1,10 @@
-{{!-- <mat-icon svgIcon="src={{flags.svg}}"></mat-icon> --}}
-<h2 class="name">Имя: {{name}}</h2>
+<mat-icon svgIcon="src={{flag}}"></mat-icon>
+<h2 class="name">{{name.official}}</h2>
 <p class="capital">Capital: {{capital}}</p>
 <p class="population">Population: {{population}}</p>
-{{!-- <p class="languages">{{languages}}</p> --}}
+<p class="languages">{{languages}}</p>
+
+{{!-- return fetch(`${BASE_URL}/name/${name}`)
+.then(response => response.json()); --}}
+
+{{!-- https://restcountries.com/v2/all?fields=name,capital,currencies --}}
